Mon May 26 22:00:01 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_table_manager.cc: Give a better error message
	  if asked to open a pre-0.6 Quartz database.

Mon May 26 20:43:21 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am,backends/Makefile.am,docs/mkdoc.pl,
	  net/Makefile.am: Fixed to never leave partial files in place of the
	  expected output if a build is interrupted.

Mon May 26 16:50:59 BST 2003  Olly Betts <olly@survex.com>

	* HACKING: Added note adapted from an old email noting why compile-time
	  options are generally best avoided.

Mon May 26 12:03:29 BST 2003  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.cc,testsuite/textfile_indexer.cc: Corrected
	  odd uses of std::string::erase() (instead of `str = str.erase(n, m)'
	  just use `str.erase(n,m)').

Sun May 25 22:59:44 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Sun May 25 22:58:28 BST 2003  Olly Betts <olly@survex.com>

	* languages/Makefile.am: Suppress "unused" warnings in Snowball
	  generated C code.

Sun May 25 21:43:34 BST 2003  Olly Betts <olly@survex.com>

	* api/omtermlistiterator.cc: Removed iostream.h include left over from
	  debugging.

Sun May 25 12:27:11 BST 2003  Olly Betts <olly@survex.com>

	* docs/,extra/omparsequery.h,extra/parsequery.yy,include/Makefile.am,
	  include/xapian.h,include/om/om.h,tests/,testsuite/backendmanager.cc,
	  testsuite/backendmanager.h,testsuite/testutils.h: Created xapian.h
	  header and changed everything to use it.

Sat May 24 23:35:46 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_document.h,
	  backends/quartz/quartz_database.cc,backends/quartz/quartztest.cc,
	  common/,include/Makefile.am,include/om/om.h,
	  include/om/omvalueiterator.h,include/xapian/,
	  testsuite/backendmanager.cc: OmValueIterator -> Xapian::ValueIterator
	  etc.

Fri May 23 15:32:29 BST 2003  Olly Betts <olly@survex.com>
